2006-05-24  Frederic Peters <fpeters@0d.be>

	* jhbuild/frontends/autobuild.py: log error to right variable in case
	of missing command.

2006-05-24  JP Rosevear  <jpr@novell.com>

	* jhbuild/commands/base.py (cmd_dot.run): pass the config
	parameter (bug #342766)

2006-05-22  Frederic Crozat  <fcrozat@mandriva.com>

	* modulesets/gnome-2.14.modules:
	* modulesets/gnome-2.16.modules: add configuration and dependencies
	for Ekiga (bug #338040).

2006-05-19  Christian Persch  <chpe@cvs.gnome.org>

	* modulesets/gnome-2.14.modules: Use gnome-2-14 branch of libgnome.

2006-05-18  Carlos Garnacho  <carlosg@gnome.org>

	* modulesets/freedesktop.org: add system-tools-backends-1.4 for the
	stb-1.4 branch, s-t-b HEAD interface has changed.
	* modulesets/gnome-2.14.modules: use system-tools-backends-1.4.
	* modulesets/gnome-2.16.modules: same here where necessary
	(gnome-applets). Also add liboobs to the build and make 
	gnome-system-tools depend on it.

2006-05-18  James Henstridge  <james@jamesh.id.au>

	* jhbuild/modtypes/tarball.py (Tarball.do_unpack): don't use
	os.chdir().
	(Tarball.do_patch): same here.
	(Tarball.do_configure): same here.
	(Tarball.do_build): same here.
	(Tarball.do_install): same here.

	* jhbuild/modtypes/mozillamodule.py (MozillaModule.checkout): use
	cwd arg to buildscript.execute() rather than os.chdir().
	(MozillaModule.do_checkout): same here.
	(MozillaModule.do_configure): same here.
	(MozillaModule.do_install): same here.

	* modulesets/gnome-2.14.modules (gok): use gnome-2-14 branch,
	fixing bug #342175.

2006-05-18  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* modulesets/gnome-2.14.modules: Use gnome-2-14 branch
	for ekiga and gnome-system-tools.

2006-05-17  James Henstridge  <james@jamesh.id.au>

	* jhbuild/modtypes/autotools.py (AutogenModule.do_configure): get
	rid of os.chdir call
	(AutogenModule.do_clean): same here.
	(AutogenModule.do_build): same here.
	(AutogenModule.do_check): same here.
	(AutogenModule.do_install): same here.
