@@ -1,3 +1,7 @@
+2006-05-25  Frederic Peters <fpeters@0d.be>
+
+	* jhbuild/frontends/autobuild.py: send log files zlib-compressed.
+
 2006-05-24  Frederic Peters <fpeters@0d.be>
 
 	* jhbuild/frontends/autobuild.py: log error to right variable in case
